# NeuralInformationShaping

./: .gitignore  InfoShape_Based_ReMine.py  LICENSE  README.md
TexShape/: README.md  calculate_mi.py  dual_optimizer_trial.py  notes.txt  pyproject.toml  test.py  train.py
TexShape/config/: main.yaml
TexShape/config/dataset_configs/: sst2.yaml
TexShape/configs/: config.yaml  test_config.yaml
TexShape/configs/dataset/: corona.yaml  mnli.yaml  sst2.yaml
TexShape/configs/encoder/: main.yaml
TexShape/configs/simulation/: compression_mnli.yaml  main.yaml  utility_privacy.yaml
TexShape/exps/testing/2024-04-23_11-20-17/.hydra/: hydra.yaml
TexShape/exps/testing/2024-04-23_11-20-49/.hydra/: hydra.yaml
TexShape/exps/testing/2024-04-23_11-47-25/.hydra/: hydra.yaml
TexShape/exps/testing/2024-04-23_11-48-06/.hydra/: hydra.yaml
TexShape/exps/testing/2024-04-23_11-48-28/.hydra/: hydra.yaml
TexShape/exps/testing/2024-04-23_11-48-58/.hydra/: hydra.yaml
TexShape/scripts/: calculate_mi.sh  train_encoder.sh
TexShape/src/: dual_optimization_encoder.py  dual_optimizer_trial.py  mine.py
TexShape/src/data/: __init__.py  corona.py  mnli.py  preprocess.py  sst2.py  utils.py
TexShape/src/features/: build_features.py
TexShape/src/models/: models_to_train.py  predict_model.py  quantize.py  utils.py
TexShape/src/test/: compression.py  utility_privacy.py  utils.py
TexShape/src/utils/: config.py  data_structures.py  experiment_setup.py  general.py  testing.py
TexShape/src/visualization/: __init__.py  text_file_utils.py  visualize.py
(+7 files in other folders)
